--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,15 @@
 version: '3.9'
+
 services:
+  web:
+    depends_on:
+      - postgres
+      - redis
+    build: .
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    ports:
+      - 3000:3000
+
   postgres:
     container_name: maino_db
     image: postgres
@@ -7,25 +17,47 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_PASSWORD: admin
-      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_DB: maino
-
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    container_name: pgadmin
-    restart: always
-    depends_on:
-      - postgres
-    environment:
-      PGADMIN_DEFAULT_EMAIL: user@localhost.com
-      PGADMIN_DEFAULT_PASSWORD: password
-    ports:
-      - 80:80
-  
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - maino_network
   redis:
     image: redis
     container_name: maino_redis
     restart: always
     ports:
       - 6379:6379
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      REDIS_DATABASES: 1
+    volumes:
+      - redis_data:/data
+    networks:
+      - maino_network
+
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    restart: always
+    depends_on:
+      - postgres
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+    ports:
+      - 80:80
+    networks:
+      - maino_network
+
+
+volumes:
+  postgres_data:
+  redis_data:
+
+networks:
+  maino_network:
+    driver: bridge
