--- a/compose.yml
+++ b/compose.yml
@@ -1,19 +1,6 @@
-version: '3.9'
-
 services:
-  web:
-    depends_on:
-      - postgres
-      - redis
-    build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
-    ports:
-      - 3000:3000
-    environment:
-      - REDIS_HOST: ${REDIS_HOST}
-    networks:
-      - maino_network
-
+  
+  
   postgres:
     container_name: maino_db
     image: postgres
@@ -28,6 +15,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - maino_network
+  
   redis:
     image: redis
     container_name: maino_redis
@@ -41,18 +29,42 @@ services:
       - redis_data:/data
     networks:
       - maino_network
+  
+  web:
+    depends_on:
+      - postgres
+      - redis
+    build: .
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    env_file:
+      - .env
+    networks:
+      - maino_network 
+  
+  nginx:
+    image: nginx
+    build: 
+      context: .
+      dockerfile: ./nginx/Dockerfile
+    container_name: maino_nginx
+    restart: always
+    ports:
+      - 80:80
+    depends_on:
+      - web
+    networks:
+      - maino_network
+
 
   sidekiq:
-    image: sidekiq
+    build: .
     container_name: sidekiq_maino
     command: bundle exec sidekiq
     depends_on:
       - postgres
       - redis
-    environment:
-      RAILS_ENV: production
-      REDIS_HOST: ${REDIS_HOST}
-      REDIS_PORT: 6379
+    env_file:
+      - .env
     networks:
       - maino_network
 
@@ -67,7 +79,7 @@ services:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
     ports:
-      - 80:80
+      - 81:80
     networks:
       - maino_network
 
