--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -10,6 +10,7 @@ server {
  proxy_connect_timeout 5s;
  proxy_send_timeout 10s;
  proxy_read_timeout 10s;
+ proxy_set_header X-Real-IP $remote_addr;
 
  location / {
  try_files $uri $uri/ @nginx_rails;
