--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,5 @@
 services:
   
-  
   postgres:
     container_name: maino_db
     image: postgres
@@ -10,7 +9,7 @@ services:
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: maino
+      POSTGRES_DB: maino_development
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
@@ -39,7 +38,9 @@ services:
     env_file:
       - .env
     networks:
-      - maino_network 
+      - maino_network
+    volumes:
+     - .:/app-rails 
   
   nginx:
     image: nginx
